# test_top_words_gistograms

./: CMakeLists.txt  README.md  test.file
src/: Colon.qml  Gistogramm.qml  Progress.qml  main.cpp  main.qml  res.qrc  top_word.cpp  top_words.cpp  top_words.h  top_words_list.cpp  top_words_list.h
